packages/webassemblyjs/test/fixtures/conversions/type-errors/reinterpret-i32-f32/module.wast
(module (func (result i32) (i32.reinterpret/f32 (i64.const 0))))
